--- a/src/main/webapp/WEB-INF/resources/css/main.css
+++ b/src/main/webapp/WEB-INF/resources/css/main.css
@@ -3,7 +3,7 @@
 body {
     font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
     /* font-family: Museo,Helvetica,arial,san-serif */
-    /* background-image: url('../images/BGIMAGE.jpg'); */
+    background-image: url('../images/BGIMAGE.jpg');
 }
 
 .panel-info > .panel-heading{
@@ -154,21 +154,21 @@ mark {
 /** End of Login CSS**/
 
 /**Registration Page Css **/
-#wrap{
+/* #wrap{
 background-image: -ms-linear-gradient(top, #FFFFFF 0%, #D3D8E8 100%);
-/* Mozilla Firefox */ 
+Mozilla Firefox 
 background-image: -moz-linear-gradient(top, #FFFFFF 0%, #D3D8E8 100%);
-/* Opera */ 
+Opera 
 background-image: -o-linear-gradient(top, #FFFFFF 0%, #D3D8E8 100%);
-/* Webkit (Safari/Chrome 10) */ 
+Webkit (Safari/Chrome 10) 
 background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #D3D8E8));
-/* Webkit (Chrome 11+) */ 
+Webkit (Chrome 11+) 
 background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #D3D8E8 100%);
-/* W3C Markup, IE10 Release Preview */ 
+W3C Markup, IE10 Release Preview 
 background-image: linear-gradient(to bottom, #FFFFFF 0%, #D3D8E8 100%);
 background-repeat: no-repeat;
 background-attachment: fixed;
-}
+} */
 
 @media (min-width:768px) {
 	#home{
